--- a/css/style.css
+++ b/css/style.css
@@ -231,3 +231,79 @@ nav ol li a{
 nav ol li a:hover{
     border-bottom: 2px solid #000;
 }
+
+@media (max-width:600px){
+
+    .container nav ol{
+        gap: 20px;
+        margin-left: 30px;
+    }
+    .home{
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        gap: 30px;
+        min-height: 70vh;
+        text-align: center;
+    }
+    .home img{
+        width: 200px;
+        height: 200px;
+    }
+    .home .pro h1{
+        font-size: 20px;
+    }
+    .oldtxt{
+        visibility: hidden;
+        position: relative;
+    }
+    .oldtxt::after{
+        content: "Education";
+        position: absolute;
+        visibility: visible;
+        top: 0;
+        left: 0;
+    }
+    .home .pro h4{
+        font-size: 15px;
+        animation: none;
+        border: none;
+        margin-left:10px;
+    }
+    .detail{
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+        min-height: 80vh;
+        margin-left: 45px;
+        gap: 20px;
+    }
+    .detail img{
+        width: 200px;
+        height: 200px;
+    }
+    .info .btn{
+        margin-left: 90px;
+    }
+    .timeline::after{
+        opacity: 0;
+    }
+    .left-arrow,.right-arrow{
+        opacity: 0;
+    }
+    .right{
+        left: 0;
+    }
+    .clg{
+        margin-left: -150px;
+        text-align: center;
+        margin-top: 10px;
+        width: 300px;
+    }
+    .edu{
+        overflow-x: hidden;
+    }
+
+
+}
